--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -9,9 +9,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # Environment variables
-.env
+.env*
 .env.local
 .env.*.local
+.env.sample
+.env.*.sample
 
 # OS-generated files
 .DS_Store
