--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -30,6 +30,15 @@ build/
 # Coverage reports
 coverage/
 
+# Logs
+logs/
+**/logs/
+*.log
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # PM2 logs
 pids/
 *.pid
